backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chess-backend-service
spec:
  selector:
    app: chess-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
